@@ -4,6 +4,8 @@
 	* win/tcl.m4       to reality. See for what's missing:
 	*                  <https://sourceforge.net/apps/trac/mingw-w64/wiki/Unicode%20apps>
 	* win/configure    (re-generated)
+	* win/tkWinPort.h  [Bug #3110161]: Extensions using TCHAR don't compile
+	on VS2005 SP1
 
 2010-11-10  Andreas Kupries  <andreask@activestate.com>
 
